--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "babel-plugin-root-import": "^6.5.0",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
